<resources>
    <string name="app_name">RegionalDeals</string>
    <string name="headerText">RegionalDeals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="favouriten">Favourites</string>
    <string name="deals_heute">Deals Today</string>
    <string name="deals">Deals</string>
    <string name="online_deals">Online Deals</string>
    <string name="gutscheine">Coupons</string>
    <string name="nearby">Near by</string>
    <string name="shopping">Near by</string>
    <string name="max_distance">Entfernung</string>
    <string name="mitmachen">Avail</string>
    <string name="apiUrl">https://www.regionaldeals.de</string>
    <string name="gutNot">You have won a coupon.\nPlease click to see</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="locationErrorMsg">Please select a location</string>
    <string name="sharedPredName">com.dealspok.www.MyPrefsFile</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyCnEXKge_M54dyLyIkkBXgWzetKIFUUE1s
    </string>
    <string name="SERVER_EXCEPTION">SERVER_EXCEPTION</string>
    <string name="LOGIN_OK">LOGIN_SUCCESS</string>
    <string name="LOGIN_ERR_INVALID_CREDENTIALS">LOGIN_ERR_INVALID_CREDENTIALS</string>
    <string name="SIGNUP_ERR_EMAIL_TAKEN">SIGNUP_ERR_EMAIL_TAKEN</string>
    <string name="SIGNUP_ERR_USERNAME_TAKEN">SIGNUP_ERR_USERNAME_TAKEN</string>
    <string name="SIGNUP_OK">SIGNUP_OK</string>
    <string name="PASSWORD_UPDATE_OK">PASSWORD_UPDATE_OK</string>
    <string name="PASSWORD_UPDATE_NOT_OK">PASSWORD_UPDATE_NOT_OK</string>
    <string name="USER_NOT_VALID">USER_NOT_VALID</string>
    <string name="SHOPS_UPLOAD_ERR">SHOPS_UPLOAD_ERR</string>
    <string name="SHOPS_UPLOAD_OK">SHOPS_UPLOAD_OK</string>
    <string name="DEALS_REMOVE_OK">DEALS_REMOVE_OK</string>
    <string name="DEALS_REMOVE_ERR">DEALS_REMOVE_ERR</string>
    <string name="GUTSCHEIN_REMOVE_OK">GUTSCHEIN_REMOVE_OK</string>
    <string name="GUTSCHEIN_REMOVE_ERR">GUTSCHEIN_REMOVE_ERR</string>
    <string name="SHOPS_REMOVE_OK">SHOPS_REMOVE_OK</string>
    <string name="SHOPS_REMOVE_ERR">SHOPS_REMOVE_ERR</string>
    <string name="DEALS_FAV_CHECK">DEALS_FAV_CHECK</string>
    <string name="DEALS_FAV_ERR">DEALS_FAV_ERR</string>
    <string name="DEALS_FAV_UNCHECK">DEALS_FAV_UNCHECK</string>
    <string name="ONLINE_FAV_CHECK">ONLINE_FAV_CHECK</string>
    <string name="ONLINE_FAV_ERR">ONLINE_FAV_ERR</string>
    <string name="ONLINE_FAV_UNCHECK">ONLINE_FAV_UNCHECK</string>
    <string name="FAVOURITES_LIST_OK">FAVOURITES_LIST_OK</string>
    <string name="nearByTextEmpty">Cannot find shops in this Category</string>
    <string name="copy_right" translatable="false" >Copyrights © %1$d</string>
    <string name="failed_token">Client Failed to retrieve token from server</string>
    <string name="BraintreeFragment_initialized">BraintreeFragment is ready to use</string>
    <string name="issues_with_authorization">There was an issue with your authorization string</string>
    <string name="token_failed">Fail to retrieve client token </string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="menu_fav">Favorites</string>
    <string name="menu_location">Location</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share App</string>
    <string name="menu_shop">Shops</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_mydeals">My Deals</string>
    <string name="menu_mycoupons">My Coupons</string>
    <string name="menu_myshops">My Shops</string>
    <string name="billing_cycle">Billing cycle</string>
    <string name="start_date">Start date</string>
    <string name="next_date">Next payment date</string>
    <string name="remaining">Deals Remaining: </string>
    <string name="deals_limit">You have reached deals limit for the current billing cycle</string>
    <string name="suberror">Kindly make subscription first</string>
    <string name="loginerror">Kindly Login first</string>
    <string name="login_signup">Login/Signup</string>
    <string name="existing_user">EXISTING USER</string>
    <string name="new_user">NEW USER</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signout">Signout</string>
    <string name="login_msg">No account yet? Create one</string>
    <string name="create_account">Create Account</string>
    <string name="signup_msg">Already a member? Login</string>
    <string name="welcome">Welcome</string>
    <string name="login_failed">Login Failed</string>
    <string name="about_us">About us</string>
    <string name="shop">Shops</string>
    <string name="add_shops">Add Shops</string>
    <string name="new_deals">New Deals</string>
    <string name="subscribe">Subscribe</string>
    <string name="create_deals">Create Deals</string>
    <string name="create_gut">Create Gutscheine</string>
    <string name="add_deals">Add Deals</string>
    <string name="about_us_text">
        RegionalDeals bietet ihnen günstige Angebote sowie Prospekte und kostenlose Gutscheine in ihrer Stadt.\n
        Durch die intelligente Push Benachrichtigung,verpassen Sie ab sofort keine Angebote mehr.\n
        Wir bieten eine Plattform spezialisiert für Regionale Unternehmen, basierend auf Mobil-App und ist kostenlos verfügbar für IOS und Android Mobile Geräte.\n
        Unser Ziel ist es eine Verbindung zwischen Benutzer und Unternehmen zu ermöglichen.</string>
    <string name="connect">Connect with us</string>
    <string name="call_us">Call help center</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="expiry">Expiry Date</string>
    <string name="del_deal">Delete Deal</string>
    <string name="website">Website</string>
    <string name="imageDesc">Click to upload pictures \n(picture size in multiples of 480x320)</string>
    <string name="notificationTextEmpty">No new notifications</string>
    <string name="no_shop">Please add a shop first!</string>
    <string name="city">Region</string>
    <string name="select_string">Select an item</string>
    <string name="cat">Category</string>
    <string name="error_dealsList">Cannot load deals. Try again later.</string>
    <string name="error_plansList">Cannot load Subscription Plans. Try again later.</string>
    <string name="continue_text">Continue</string>
    <string name="agb_text">Zahlung sind monatlich per überweisung\n\nWir empfehlen ihnen eine dauertheftige abzuschließen\n\nUnsere KontoDaten (Sparkasse Aachen)\n\nKontoinhaber: Regionaldeals RD e.K.\nIBAN: DE66 3905 0000 1073 1335 79\nBIC: AACSDE3XX\n(Unsere kontodaten stehen in email)"</string>
    <string name="payment">Payment</string>
    <string name="user_data">User Data</string>
    <string name="summary">Summary</string>
    <string name="terms_cond">Terms and Conditions</string>
    <string name="shop_terms">Allgemeine Geschäftsordnung gelesen und akzeptiert</string>
    <string name="shop_agb">AGB (https://www.regionaldeals.de/#agb),\n Impressum (https://www.regionaldeals.de/#impressum)\n und Datenschutz (https://www.regionaldeals.de/#datenschutz)\n gelesen und akzeptiert</string>
    <string name="contract_close">Vertrag abschließen</string>
</resources>