<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:expandedTitleTextAppearance="@style/DealsToolbarHeaderText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:id="@+id/imageLayaout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.daimajia.slider.library.SliderLayout
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fitsSystemWindows="true"
                />
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/deal_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_8sdp">

                <TextView
                    android:id="@+id/urlTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:visibility="gone"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/article_titles" />

                <TextView
                    android:id="@+id/place_url"
                    android:textColor="@color/colorPrimaryDark"
                    android:linksClickable="true"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:text="@string/description"
                    android:textColor="?attr/colorAccent"
                    android:textSize="@dimen/article_titles" />

                <TextView
                    android:id="@+id/place_detail"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp">

            <TextView
                android:layout_width="match_parent"
                android:id="@+id/shopName"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/article_titles" />

            <TextView
                android:id="@+id/shop_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/shop_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/expLabel"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry"
                android:textColor="@color/red"
                android:textSize="26px"
                />
            <TextView android:id="@+id/exp_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="left"
                android:textSize="16dip"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/md_keylines"
                android:layout_marginTop="@dimen/md_keylines"
                android:text="@string/location"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/article_titles" />

        </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="300dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_8sdp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_deal_del"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                android:background="@color/red"
                android:text="@string/del_deal"/>

        </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
