<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightWhite">

    <android.support.v7.widget.CardView
        android:id="@+id/headerAbo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorWhite"
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <ImageView
                android:id="@+id/c1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

            <ImageView
                android:id="@+id/c2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c1"
                app:layout_constraintRight_toLeftOf="@id/c3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

            <ImageView
                android:id="@+id/c3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c2"
                app:layout_constraintRight_toLeftOf="@id/c4"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

            <ImageView
                android:id="@+id/c4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_unchecked_circle_green_24dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardAGB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:clipToPadding="true"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@id/progressBarProcessing"
        app:layout_constraintTop_toBottomOf="@id/headerAbo">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/DealsToolbarHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/summary"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPlan"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="Gewählter Tariff: "
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvHeader" />

            <TextView
                android:id="@+id/tvDesc"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="some text"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvPlan" />

            <TextView
                android:id="@+id/tvInfo"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:text="Wichtig: Für jeder monatlisch überweisung müssen Sie ihre email adresse in verwendungzweke eingeben."
                android:textAlignment="center"
                android:textColor="@color/red"
                app:layout_constraintTop_toBottomOf="@id/tvDesc" />


            <CheckBox
                android:id="@+id/checkBoxTerms"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:paddingLeft="@dimen/_4sdp"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:textAlignment="gravity"
                android:text="@string/shop_terms"
                app:layout_constraintTop_toBottomOf="@id/tvInfo"/>

            <CheckBox
                android:id="@+id/checkBoxABG"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/_4sdp"
                android:text="@string/shop_agb"
                android:autoLink="web"
                android:gravity="top"
                android:textAlignment="gravity"
                app:layout_constraintTop_toBottomOf="@id/checkBoxTerms"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAgbSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/contract_close"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBoxABG" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBarProcessing"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:translationY="6dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
