<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightWhite">

    <android.support.v7.widget.CardView
        android:id="@+id/headerAbo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorWhite"
        app:cardElevation="3dp"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp">

            <ImageView
                android:id="@+id/c1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

            <ImageView
                android:id="@+id/c2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c1"
                app:layout_constraintRight_toLeftOf="@id/c3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

            <ImageView
                android:id="@+id/c3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/c2"
                app:layout_constraintRight_toLeftOf="@id/c4"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

            <ImageView
                android:id="@+id/c4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_check_circle_green_24dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardAGB"
        android:layout_margin="@dimen/_8sdp"
        android:clipToPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardElevation="3dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvHeader"
                style="@style/DealsToolbarHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/payment"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvDesc"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agb_text"
                android:selectAllOnFocus="true"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvHeader"/>

            <TextView
                android:id="@+id/tvInfo"
                style="@style/DealsPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Verwendungzweke"
                android:selectAllOnFocus="true"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/tvDesc"/>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnAgbSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/continue_text"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toBottomOf="@id/tvInfo"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBarProcessing"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:translationY="6dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
